# benchmark

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile_cpu  Dockerfile_gpu  EXPORTING.md  README.md  all_red_model.dict  all_reduce_model.py  analyze_results.py  asv.conf.json  backfill.py  bench_utils.py  bisection.py  check_lazy.py  check_xla.py  collect_graph_ir.py  compare.py  compare.sh  compare_plot.py  compare_plot_kde.py  compute_score.py  conftest.py  data_sizes.list  ddp_benchmark.py  ddp_experiments.py  debug_launch_benchmark.sh  debug_run.py  diagnostics.py  export-all.sh  fx_profile.py  gen_benchmark_configs.py  gen_summary_metadata.py  gh-issue.md  (+52 more)
.ci/torchbench/: check-ssh.sh  install-conda.sh  install.sh  test.sh
.ci/tritonbench/: install-triton-nightly.sh  install.sh  test-install.sh  test-operators.sh  test.sh
.circleci/: config.yml
.github/: dependabot.yml  scale-config.yml
.github/scripts/: abtest.py  bisection-config.sample.yaml  bisection.py  build-benchmark-docker.sh  build-docker.sh  build-pytorch.sh  generate-abtest-config.py  gitutils.py  process-profile-pr.py  run-backends.py  run-benchmark.sh  run-bisection.sh  run-config.py  run-devbig-abtest.sh  run-devbig-stub.sh  run-devbig.sh  run-docker.sh  run-nightly-nodocker.sh  run-nodocker.sh  run-sweep-benchmark.sh  run-sweep-internal.sh  run-sweep-nodocker.sh  run-sweep.sh  run-v0-big-stub.sh  run-v0-big.sh  run-v0-devbig-stub.sh  run-v0-devbig.sh  run-v0.sh  run.sh  test-repeated-runs.py  torch-trt.patch  upload-github.sh  upload-scribe.sh  v1-flaky-tests.txt
.github/workflows/: _devinfra-nightly-base.yml  _linux-benchmark-cuda.yml  _linux-test-a10g.yml  _linux-test-cpu.yml  _linux-test-cuda.yml  benchmark-config.yml  bisection.md  bisection.yml  build-gcp-docker.yml  build-nightly-docker.yml  build-tritonbench-docker.yml  clean-nightly-docker.yml  correctness-test.yml  correctness.yml  devinfra-nightly.yml  gcp-a100-bisection.yml  instruction-count.yml  lazy-tensor-nightly.yml  linux-test-a10g.yml  main.yml  pr-a10g.yml  pr-gha-runner.yml  pr-gpu-stability-ci.yml  pr-profiling.yml  pr-test-0.1.yml  pr-test-ghissue.yml  pr-test.yml  sweep.yml  torchao.yml  tritonbench-nightly.yml  tritonbench-test.yml  userbenchmark-a100-backfill.yml  userbenchmark-a100-bisection.yml  userbenchmark-a100-docker.yml  userbenchmark-a100-release.yml  userbenchmark-a100.yml  userbenchmark-ai-cluster.yml  userbenchmark-c5-24xlarge.yml  userbenchmark-ibmcloud-testrunner.yml  userbenchmark-linux-arm64-cpu.yml  (+13 more)
.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  (+131 more)
accuracy/: README.md  model_accuracy.py
baselines/: .gitignore  Makefile  README.md  benchmark_common.h  cudnn_conv.cpp  cudnn_microbenchmark.cpp  lstm.cpp  lstm_variable.cpp  mlstm.cpp
benchmarks/: __init__.py  lstm_variants_test.py  memnn.py  nlp.py  rnn.py  sru.py  sru_test.py  tensor.py
compare_runs/: driver.sh
components/: TorchExpert
configs/: blade_bench.yaml  blade_bench_full.yaml  blade_bench_tiny.yaml  blade_cpu_full.yaml  blade_cpu_partial.yaml  blade_cpu_tiny.yaml  blade_cuda_tiny.yaml
cpp/: build_nopytorch_test.sh  build_test.sh  setup.txt  test_nopytorch.cpp
cpp_bench/: CMakeLists.txt  bench.cpp  functions.cpp
dlrm/: __init__.py  origin
docker/: Dockerfile  build-gcp-a100-docker.sh  build-torchbench-nightly-docker.sh  gcp-a100-runner-dind.dockerfile  torchbench-nightly.dockerfile  torchbench.dockerfile
exported_litert/: export-status.csv  export-torchbench-litert-batch.py  tosa-legalize-batch.sh  tosa-legalize-status.csv
exported_onnx/: .gitignore  export-status-onnx.csv  export-torchbench-onnx-batch.py
exported_pt2/: .gitignore  export-status.csv  export-torchbench-batch.py  gen-model-details.py  torchbench-models.yaml
legacy/: LICENSE  README.md  run.py
legacy/timing/cpp2/: CMakeLists.txt  README.md  run.py
legacy/timing/cpp2/benchmarks/: tensor_allocation.cpp  tensor_properties.cpp
mlcube/: .dockerignore  Dockerfile_cpu  Dockerfile_gpu  mlcube.py  mlcube_cpu.yaml  mlcube_gpu.yaml  run_test.sh  run_test_bench.sh
models/: ADDING_MODELS.md
plot/: README.md  main.py
python/: bnlstm.py  install_and_run.sh
rnns/: README.md  fastrnns-README.md  runner.py  wsj.pkl
score/: README.md  compute_score.py  generate_score_config.py  score.yml  torchbench_0.0.yaml
scripts/: activate_conda.sh  benchmark_common.py  benchrunner.py  compare_benchmark.py  coverage.py  cudnn_lstm.py  dump_bench.py  flops.py  get_torch_nightly_wheels.py  housekeeping.sh  install_basics.sh  install_basics_amzn_linux_2.sh  install_conda.sh  install_cuda.sh  install_nightlies.sh  install_nvidia.sh  install_torchbenchmark.sh  launcher.py  lstm.py  machine_util.py  milstm.py  mlstm.py  model_accuracy.py  plot_compare_benchmarks.py  post_github_comment.py  proper_bs.py  recreate_conda_environment.sh  run_bench_and_upload.sh  run_local.sh  run_sweep_existing_envs.sh  setup_ci.sh  setup_nvda_11.7.sh  torchbench_install.sh  torchbench_test.sh  ttest.py  update_device_batch_size.py  upload_s3.py  upload_scribe.py  upload_scribe_v2.py  utils.py
setup/: Dockerfile  README.md  bench_conf.py  install_dependencies.sh  packet-benchmark-setup.sh  packet-setup.sh  setup.sh
testing/: stacked_bar_plots.py  test_patch.py  test_single_model.py
timing/cpp/: CMakeLists.txt  README.md  build_test.sh  mlstm.cpp  test.cpp
timing/cpp/benchmarks/: avx_sum.cpp  compare_eigen.cpp  tbb_vs_omp.cpp
timing/cpp2/: CMakeLists.txt  README.md  build_deps.sh  run.py
timing/cpp2/benchmarks/: aten_overheads.cpp  tensor_shape.cpp  torch_empty.cpp
tools/: data.py
torchbenchmark/: __init__.py  e2e.py  tasks.py
traces/: summary.txt
userbenchmark/: ADDING_USERBENCHMARKS.md  __init__.py  regression_detector.py  s3.py  task.py  utils.py
utils/: __init__.py  build_requirements.txt  build_utils.py  cuda_utils.py  github.py  gitutils.py  python_utils.py  s3_utils.py  torch_nightly_utils.py
workspace/: parameters.yaml
(+2866 files in other folders)
